# devtools_scicomp_project_2025

./: .gitignore  Makefile  README.md  pyproject.toml  report.md  requirements.txt
.github/workflows/: documentation.yml  tester.yml
doc/source/: conf.py  index.rst
experiments/: common.yaml  config.yaml  gated_mlp.yaml  h3.yaml  lstm.yaml  mamba_s4_low_rank.yaml  mamba_s4d.yaml  mamba_s4d_inv.yaml  mamba_s4d_real.yaml  mamba_s6.yaml  s4.yaml  s4_low_rank.yaml  s4d_example.yaml  s4d_inv.yaml  s4d_real.yaml  s6.yaml  s6_example.yaml  s6_random.yaml  transformers.yaml
experiments/copy/: common.yaml  mamba_s6.yaml  s6.yaml
experiments/selective_copy/: common.yaml  mamba_s4_low_rank.yaml  mamba_s4d_inv.yaml  s4.yaml  s4_low_rank.yaml  s4d_inv.yaml  s4d_real.yaml
logs/: numpy_knn_classifier.txt  slow_knn_classifier.txt  spam_numba_knn_classifier.txt  spam_numpy_knn_classifier.txt
scripts/: run.py  time_distance_function.py
shell/: submit_baseline.sh  submit_mamba.sh  submit_selective.sh  submit_spam.sh  submit_train.sh
src/pyclassify/: __init__.py  _compile.py  classifier.py  datamodule.py  model.py  module.py  utils.py
ssm/: __init__.py  cli.py  datamodule.py  dataset.py  early_stopping.py  logger.py  metric_tracker.py  module.py  pscan.py  s4.py  trainer.py  utils.py
ssm/model/: __init__.py  gated_mlp.py  h3.py  lstm.py  mamba.py  s4.py  s6.py  (+1 more)
test/: test_.py
tests/: test_cli.py  test_dataset.py  test_gated_mlp.py  test_h3.py  test_lstm.py  test_mamba.py  test_model.py  test_s4.py  test_s4_block.py  test_s6.py  test_trainer.py  test_transformer.py
(+48 files in other folders)
